[gd_scene load_steps=12 format=3 uid="uid://cmvaff8l8hi4i"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_l756d"]
[ext_resource type="Script" path="res://Scripts/debug.gd" id="2_og8mx"]
[ext_resource type="Script" path="res://Resources/example_ussage.gd" id="3_maika"]
[ext_resource type="Script" path="res://Resources/example_ressource.gd" id="4_i2kr0"]
[ext_resource type="Script" path="res://Scripts/dialogue.gd" id="5_3jw8x"]
[ext_resource type="Script" path="res://Scenes/Responses.gd" id="6_6bg6h"]

[sub_resource type="Resource" id="Resource_afj6f"]
script = ExtResource("4_i2kr0")
example_int = 5
example_string = "5 test"
example_bool = false
example_array = Array[ExtResource("4_i2kr0")]([])
enum_select = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bh0w8"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_cpjbn"]
color = Color(1, 1, 1, 1)
grow_begin = 5.0
grow_end = 5.0
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ej1md"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxofg"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l756d")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="Play" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="DEBUG" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -293.0
offset_bottom = 31.0
grow_horizontal = 0
script = ExtResource("2_og8mx")

[node name="VBoxContainer" type="HBoxContainer" parent="DEBUG"]
layout_mode = 2

[node name="Save" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Delete" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="ChangeExample" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "ChangeExample"

[node name="Start Test Dialogue" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "Start Test Dialogue"

[node name="Start Test Responses" type="Button" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "Start Test Response"

[node name="TestResource" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_maika")
example_data = SubResource("Resource_afj6f")

[node name="Dialogue" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -497.0
offset_top = -40.0
offset_right = 497.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_3jw8x")

[node name="Name" type="Label" parent="Dialogue"]
layout_mode = 2
offset_left = 55.0
offset_top = -49.0
offset_right = 152.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 3

[node name="Text" type="RichTextLabel" parent="Dialogue"]
layout_mode = 2
offset_left = 169.0
offset_top = -46.0
offset_right = 821.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
fit_content = true

[node name="Responses" type="Control" parent="."]
layout_mode = 1
anchor_bottom = 0.029
offset_top = 400.0
offset_right = 1150.0
offset_bottom = 400.0
script = ExtResource("6_6bg6h")

[node name="Response1" type="Button" parent="Responses"]
layout_mode = 0
offset_left = 420.0
offset_top = 45.0
offset_right = 485.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bh0w8")
theme_override_styles/hover = SubResource("StyleBoxLine_cpjbn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ej1md")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxofg")
theme_override_styles/focus = SubResource("StyleBoxLine_cpjbn")
text = "Choice 1"
alignment = 2

[node name="Response2" type="Button" parent="Responses"]
offset_left = 660.0
offset_top = 45.0
offset_right = 725.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bh0w8")
theme_override_styles/hover = SubResource("StyleBoxLine_cpjbn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ej1md")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxofg")
theme_override_styles/focus = SubResource("StyleBoxLine_cpjbn")
text = "Choice 2"
alignment = 0

[node name="Response3" type="Button" parent="Responses"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -29.396
offset_right = 33.0
offset_bottom = -6.396
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bh0w8")
theme_override_styles/hover = SubResource("StyleBoxLine_cpjbn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ej1md")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxofg")
theme_override_styles/focus = SubResource("StyleBoxLine_cpjbn")
text = "Choice 3"

[node name="Response4" type="Button" parent="Responses"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = 100.604
offset_right = 32.5
offset_bottom = 123.604
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_bh0w8")
theme_override_styles/hover = SubResource("StyleBoxLine_cpjbn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ej1md")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxofg")
theme_override_styles/focus = SubResource("StyleBoxLine_cpjbn")
text = "Choice 4
"

[node name="Last_question" type="Label" parent="Responses"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -77.396
offset_right = 100.0
offset_bottom = -54.396
grow_horizontal = 2
grow_vertical = 2
text = "How are you doing today?"
horizontal_alignment = 1

[connection signal="pressed" from="MainMenu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/Save" to="DEBUG" method="_on_save_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/Load" to="DEBUG" method="_on_load_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/Delete" to="DEBUG" method="_on_delete_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/ChangeExample" to="DEBUG" method="_on_change_example_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/Start Test Dialogue" to="DEBUG" method="_on_start_test_dialogue_pressed"]
[connection signal="pressed" from="DEBUG/VBoxContainer/Start Test Responses" to="DEBUG" method="_on_start_test_responses_pressed"]
